<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/listFragment">

    <fragment
        android:id="@+id/listFragment"
        android:name="com.miu.droidtest.view.ListFragment"
        android:label="fragment_list"
        tools:layout="@layout/fragment_list" >
        <action
            android:id="@+id/action_listFragment_to_detailsFragment"
            app:destination="@id/detailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/favoriteFragment"
        android:name="com.miu.droidtest.view.FavoriteFragment"
        android:label="fragment_favorite"
        tools:layout="@layout/fragment_favorite" />
    <fragment
        android:id="@+id/dataFragment"
        android:name="com.miu.droidtest.view.DataFragment"
        android:label="fragment_data"
        tools:layout="@layout/fragment_data" />
    <fragment
        android:id="@+id/detailsFragment"
        android:name="com.miu.droidtest.view.DetailsFragment"
        android:label="DetailsFragment" >
        <action
            android:id="@+id/action_detailsFragment_to_galleryFragment"
            app:destination="@id/galleryFragment" />
    </fragment>
    <fragment
        android:id="@+id/galleryFragment"
        android:name="com.miu.droidtest.view.GalleryFragment"
        android:label="fragment_gallery"
        tools:layout="@layout/fragment_gallery" />
</navigation>